# Fractals-Viewer

./: CMakeLists.txt  CPPLINT.cfg  README.md  main.cpp  main.cu  sonar-project.properties
.github/workflows/: build.yml
Algorithms/: abstract_algorithm.h  abstract_formula_algorithm.h  formula_algorithm.cpp  formula_algorithm.h
Algorithms/PolynomialCalculator/: polynomial_calculator.h
Controller/: controller.cpp  controller.h
Cuda/: array.cuh  complex.cuh  cuda_error_handler.cu  cuda_error_handler.cuh  cuda_formula_algorithm.cu  cuda_formula_algorithm.cuh  cuda_formula_image_processor.cu  cuda_formula_image_processor.cuh  expression_calculator.cuh  formulas_samples.cu  formulas_samples.cuh  fractal_algorithms.cu  fractal_algorithms.cuh  stack.cuh
Cuda/PolynomialCalculator/: expression.cpp  expression.h  polynomial_calculator.cuh
Helpers/: constants.h  double_comparison.cpp  double_comparison.h  expression_parser.cpp  expression_parser.h  helpers.h
Helpers/MinMaxContainer/: min_max_container.h
Helpers/TimeMeasurer/: time_measurer.cpp  time_measurer.h
Image/: color.cpp  color.h  gradient.cpp  gradient.h  image.cpp  image.h  image_settings.h
Image/ImageProcessor/: abstract_image_processor.h  formula_image_processor.cpp  formula_image_processor.h
ImageProcessor/: abstract_image_processor.cpp  abstract_image_processor.h  formula_image_processor.cpp  formula_image_processor.h
Point/: point.cpp  point.h  point_info.h
